master: authenticated adding and deleting of urls now working.
